--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="header__content">
           <div class="top">
-            <a href="/" class="logo">
+            <a href="#" class="logo">
               <img
               class="logo__image"
               src="images/logo.png"
@@ -63,7 +63,7 @@
           </div>
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="/" class="menu__link">Home</a>
+              <a href="#" class="menu__link">Home</a>
             </li>
             <li class="menu__item">
               <a href="#About-Us" class="menu__link">About Us</a>
