--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="menu__content">
           <div class="top menu__toop">
-            <a href="/" class="logo">
+            <a href="#" class="logo">
               <img
               class="logo__image"
               src="images/logo.png"
